# px25-graalwasm

./: LICENSE  README.md
graalwasm/graalwasm-inspector/: pom.xml
graalwasm/graalwasm-inspector/notes/: Meeting2.md  Meeting3.md  Meeting4.md  Meeting5.md  Meeting6.md  Meeting7.md  Meeting8.md  Meeting9.md  meeting2.txt
graalwasm/graalwasm-inspector/src/main/java/org/example/: AdderInterface.java  DirectWasm.java  InspectModule.java  JsInstance.java  Main.java  P1Loader.java  SimpleBindings.java  WasmBridge.java  WasmCommand.java  WasmFunction.java
graalwasm/graalwasm-inspector/src/main/resources/: add.js  adder.wasm  adder2.wasm  env.wat  wasm_cpp.wasm  wasm_cpp.wat
wasm-cpp/: CMakeLists.txt  README.md  main.cpp
wasm-cpp/src/: Export.h  wasm_math.cpp  wasm_math.h
wit-introduction/: .gitignore  CMakeLists.txt  README.md
wit-introduction/host_application/: README.md
wit-introduction/host_application/adder_host/: Cargo.toml
wit-introduction/src/: adder.c  adder.h  adder.wasm  adder.wit  adder2.wasm  adder2.wat  implementation.cpp  out.wat  wasm_cpp.wasm
wit-to-java/: Cargo.toml  README.md  SimpleBindings.java  adder.wit
wit-to-java/src/: lib.rs  main.rs
wit-to-java/tests/: generator_tests.rs
wit-to-java/tests/wit/: test_wit.wit
